--- a/scss/layout/media/_media933.scss
+++ b/scss/layout/media/_media933.scss
@@ -27,4 +27,15 @@
     .Contenido-Tres-Home h3{
         padding: 0% 27%;
     }
+
+    // NOSOTROS PAGE
+    .Titulo{
+        p{
+            font-size: 1.1rem;
+        }
+        img{
+            width: 130px;
+            height: 130px;
+        }
+    }
 }
