--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@
 // MEDIA 
 
 @import "./layout/media/media1440";
+@import "./layout/media/media1280";
 @import "./layout/media/media1250";
 @import "./layout/media/media1219";
 @import "./layout/media/media1192";
