--- a/scss/layout/media/_media1100.scss
+++ b/scss/layout/media/_media1100.scss
@@ -1,5 +1,6 @@
 // HOMEPAGE
 @media (max-width:1100px){
+    // HOME PAGE
     .TituloHome h2{
         font-size: 2.5rem;
     }
@@ -12,5 +13,24 @@
     .LogosClientes{
         column-gap: 9rem;
         row-gap: 5rem;
+    }
+    
+    // NOSOTROS PAGE
+    .Trabajadores-box, .Ideas-box, .Ideas-box{
+        width: 275px;
+    }
+    .mujer1-box, .mujer2-box, .mujer3-box, .hombre1-box, .hombre2-box,.hombre3-box{
+        h3{
+            font-size: 2.3rem;
+        }
+        p{
+            font-size: 1.2rem;
+        }
+    }
+    .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3{
+        margin: 3rem;
+    }
+    .About-Teamwork{
+        height: 500px;
     }
 }
