--- a/scss/layout/media/_media425.scss
+++ b/scss/layout/media/_media425.scss
@@ -1,7 +1,13 @@
 @media (min-width:425px) and (max-width:606px){
+    // NAVBAR
     .navbar-menu{
         padding: 0.5rem;
     }
+    .navbar a{
+        font-size: 1.2rem;
+    }
+
+    // HOMEPAGE
     .Contenido-Uno-Home{
         margin: 2rem;
     }
@@ -46,6 +52,8 @@
         width: 90px;
         height: 90px;
     }
+
+    // SERVICIOS PAGE
     .Titulo h1{
         grid-column: 1/3;
         grid-row: 1/2;
@@ -89,9 +97,6 @@
     .texto-service{
         font-size: 1rem;
     }
-    .navbar a{
-        font-size: 1.2rem;
-    }
     .info-contacto h3{
         grid-column: 1/4;
         justify-self: center;
@@ -116,13 +121,14 @@
     .copyright p{
         font-size: .5rem;
     }
-    /* NOSTORS PAGE*/
+
+    // NOSOTROS PAGE
     .About-Teamwork{
         height: 150px;
     }
     .Trabajadores-box, .Ideas-box{
-        width: 100px;
-        height: auto;
+        width: 125px;
+        height: 65px;
     }
     .Trabajadores-box p, .Ideas-box p{
         font-size: 1rem;
