--- a/css/style.css
+++ b/css/style.css
@@ -925,7 +925,38 @@ ul {
 
 @media (max-width: 1280px) {
   .Trabajadores-box, .Ideas-box, .Ideas-box {
-    width: 320px; } }
+    width: 320px; }
+  .Titulo p {
+    font-size: 1.5rem;
+    margin: 0rem 0rem 0rem 3rem; }
+  .service-box {
+    width: 550px; }
+    .service-box h2 {
+      font-size: 2.5rem; }
+  .texto-service {
+    padding: 1.5rem;
+    font-size: 1.5rem; }
+  .servicios {
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 0; }
+  .servicio-redsocial, .servicio-consultoria, .servicio-rebranding, .servicio-seo, .servicio-consultoria, .servicio-rebranding, .servicio-seo {
+    grid-row: 1/2;
+    grid-column: 1/3; }
+  .servicio-consultoria {
+    grid-row: 2/3; }
+  .servicio-rebranding {
+    grid-row: 3/4; }
+  .servicio-seo {
+    grid-row: 4/5; }
+  .red-box, .consul-box, .seo-box, .rebran-box, .consul-box, .seo-box, .rebran-box, .seo-box {
+    height: 300px;
+    width: 350px;
+    align-content: center; }
+    .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .seo-box h2 {
+      margin: 1rem 0; }
+    .red-box p, .consul-box p, .seo-box p, .rebran-box p, .consul-box p, .seo-box p, .rebran-box p, .seo-box p {
+      font-size: 1.5rem; } }
 
 @media (max-width: 1250px) {
   .TituloHome h1 {
@@ -1050,36 +1081,6 @@ ul {
     padding: 0% 33%; }
   .Titulo h1 {
     font-size: 2.5rem; }
-  .Titulo p {
-    font-size: 1.5rem;
-    margin: 0rem 0rem 0rem 3rem; }
-  .service-box h2 {
-    font-size: 2.5rem; }
-  .service-box {
-    width: 550px; }
-  .texto-service {
-    padding: 0rem;
-    font-size: 1.5rem; }
-  .servicios {
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 0; }
-  .servicio-redsocial, .servicio-consultoria, .servicio-rebranding, .servicio-seo, .servicio-consultoria, .servicio-rebranding, .servicio-seo {
-    grid-row: 1/2;
-    grid-column: 1/3; }
-  .red-box, .consul-box, .seo-box, .rebran-box, .consul-box, .seo-box, .rebran-box, .seo-box {
-    height: 300px;
-    align-content: center; }
-  .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .seo-box h2 {
-    font-size: 1.5rem; }
-  .red-box p, .consul-box p, .seo-box p, .rebran-box p, .consul-box p, .seo-box p, .rebran-box p, .seo-box p {
-    font-size: 1.5rem; }
-  .servicio-consultoria {
-    grid-row: 2/3; }
-  .servicio-rebranding {
-    grid-row: 3/4; }
-  .servicio-seo {
-    grid-row: 4/5; }
   .Trabajadores-box, .Ideas-box {
     grid-column: 1/2;
     justify-self: center; }
@@ -1307,19 +1308,21 @@ ul {
   .red-box, .consul-box, .seo-box, .rebran-box, .consul-box, .seo-box, .rebran-box, .seo-box {
     width: 100%;
     height: 200px;
-    align-content: start; }
+    align-content: center; }
   .red-box, .consul-box, .seo-box, .rebran-box, .rebran-box {
     border-right: 10px solid #00798B;
     border-left: none; }
-  .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .seo-box h2 {
-    font-size: 1.8rem; }
-  .red-box p, .consul-box p, .seo-box p, .rebran-box p, .consul-box p, .seo-box p, .rebran-box p, .seo-box p {
-    font-size: 1.3rem;
-    padding: 0rem 4rem;
-    text-align: justify; }
+    .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .rebran-box h2 {
+      font-size: 1.8rem; }
+    .red-box p, .consul-box p, .seo-box p, .rebran-box p, .rebran-box p {
+      font-size: 1.3rem;
+      padding: 0 4rem;
+      text-align: justify; }
+  .consul-box, .seo-box, .seo-box {
+    border-right: none;
+    border-left: 10px solid #004c44; }
   .menu_hamburguesa:checked ~ .ul_links {
     order: 1; }
-  /* NOSOTROS PAGE */
   .Logo-Titulo {
     display: none; }
   .Titulo h1 {
@@ -1382,7 +1385,18 @@ ul {
     .Trabajadores-box p i, .Ideas-box p i, .Ideas-box p i {
       font-size: 2rem; }
     .Trabajadores-box p strong, .Ideas-box p strong, .Ideas-box p strong {
-      font-size: 1.9rem; } }
+      font-size: 1.9rem; }
+  .service-box {
+    height: 100px; }
+  .texto-service {
+    font-size: 1.2rem;
+    padding: 1.5rem .6rem; }
+  .red-box, .consul-box, .seo-box, .rebran-box, .rebran-box {
+    height: 180px; }
+    .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .rebran-box h2 {
+      font-size: 1.3rem; }
+    .red-box p, .consul-box p, .seo-box p, .rebran-box p, .rebran-box p {
+      font-size: 1.2rem; } }
 
 @media (min-width: 425px) and (max-width: 606px) {
   .navbar-menu {
@@ -1549,17 +1563,6 @@ ul {
     border-top: 10px solid #004c44; }
   .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .hombre-2, .hombre-3 {
     margin: 2.5rem 2rem; }
-  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
-    font-size: 1rem;
-    padding: 0 9%; }
-  .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
-    opacity: 90%;
-    height: auto;
-    width: auto; }
-  .FotoArticle1, .FotoArticle2, .FotoArticle2, .FotoArticle2 {
-    grid-row: 1/4; }
-  .FotoArticle1 img, .FotoArticle2 img, .FotoArticle2 img {
-    object-fit: cover; }
   #TituloParrafo {
     font-size: .8rem;
     text-align: center; }
@@ -1577,6 +1580,17 @@ ul {
     font-size: 1rem; }
   .Contenido-Uno-Home p {
     margin: 1rem 0rem; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    font-size: 1rem;
+    padding: 0 9%; }
+  .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
+    opacity: 90%;
+    height: auto;
+    width: auto; }
+  .FotoArticle1, .FotoArticle2, .FotoArticle2, .FotoArticle2 {
+    grid-row: 1/4; }
+  .FotoArticle1 img, .FotoArticle2 img, .FotoArticle2 img {
+    object-fit: cover; }
   .Contenido-Dos-Home, .Contenido-Tres-Home, .Contenido-Tres-Home {
     grid-template-rows: repeat(2, 202px); }
   .FotoArticle1, .FotoArticle2, .FotoArticle2 {
@@ -1589,4 +1603,18 @@ ul {
   .Contenido-Tres-Home h3 {
     padding: 0% 12%; }
   .ClientesContainer h2 {
-    font-size: 2rem; } }
+    font-size: 2rem; }
+  .Titulo h1 {
+    font-size: 2rem; }
+  .Service-Foto {
+    height: 200px; }
+  .service-box h2 {
+    font-size: 1.5rem; }
+  .texto-service {
+    font-size: 1rem; }
+  .red-box p, .consul-box p, .seo-box p, .rebran-box p, .consul-box p, .seo-box p, .seo-box p, .rebran-box p {
+    padding: 0 .5rem;
+    font-size: .9rem;
+    text-align: center; }
+  .red-box h2, .consul-box h2, .seo-box h2, .rebran-box h2, .consul-box h2, .seo-box h2, .seo-box h2, .rebran-box h2 {
+    font-size: 1.15rem; } }
