--- a/scss/layout/media/_media1280.scss
+++ b/scss/layout/media/_media1280.scss
@@ -1,5 +1,51 @@
 @media (max-width:1280px){
+    // NOSOTROS PAGE
     .Trabajadores-box, .Ideas-box{
         width: 320px;
+    }
+
+    // SERVICE PAGE
+    .Titulo p{
+        font-size: 1.5rem;
+        margin: 0rem 0rem 0rem 3rem;
+    }
+    .service-box{
+        width: 550px;
+        h2{
+            font-size: 2.5rem;
+        }
+    }
+    .texto-service{
+        padding: 1.5rem;
+        font-size: 1.5rem;
+    }
+    .servicios{
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 0;
+    }
+    .servicio-redsocial,.servicio-consultoria,.servicio-rebranding, .servicio-seo{
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+    .servicio-consultoria{
+        grid-row: 2/3;
+    }
+    .servicio-rebranding{
+        grid-row: 3/4;
+    }
+    .servicio-seo{
+        grid-row: 4/5;
+    }
+    .red-box, .consul-box, .rebran-box, .seo-box{
+        height: 300px;
+        width: 350px;
+        align-content: center;
+        h2{
+            margin: 1rem 0;
+        }
+        p{
+            font-size: 1.5rem;
+        }
     }
 }
