--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -11,10 +11,10 @@
 .Portfolio-box {
     background-color: map-get($colores, 'box-color2' );
     color: map-get($colores, 'texto-color1');
-    opacity: 90%;
     width: 719px;
     height: 146px;
     align-content: center;
+    @include flex(row,nowrap,center,center,none);
 
     h2 {
         font-size: map-get($fontsize, 'lg');
@@ -41,12 +41,13 @@
     font-size: 2.5rem;
     font-weight: 550;
     text-align: center;
+    margin: 1rem 0;
 }
 
 .background-work1 {
     background-color: map-get($colores, 'texto-color1');
     border-top: 10px solid map-get($colores, 'box-color1');
-    height: 190px;
+    height: auto;
 }
 
 .background-work2 {
@@ -58,5 +59,5 @@
     text-align: justify;
     font-weight: 450;
     font-size: 1.1rem;
-    padding: 0 3rem;
+    padding: 1rem;
 }
