--- a/scss/layout/media/_media611.scss
+++ b/scss/layout/media/_media611.scss
@@ -62,4 +62,17 @@
             font-size: 1.2rem;
         }
     }
+
+    //PORTFOLIO PAGE
+    .Portfolio-box{
+        h2{
+            font-size: 2rem;
+        }
+    }
+    .Carre-work, .Faber-work, .sinte-work, .Cine-work, .Farma-work, .Grido-work{
+        margin: 1rem 0;
+    }
+    .portfolioText{
+        padding: 1rem;
+    }
 }
